# line-following-barcode-decoding-car-project

./: CMakeLists.txt  barcode39.c  barcode39.h  dashboard.html  dashboard.js  encoder.c  encoder.h  imu.c  imu.h  line.c  line.h  lwipopts.h  main.c  main_backup.c  main_encoder_test.c  mosquitto.conf  motor.c  motor.h  mqtt_client.h  mqtt_pico.c  og_encoder.c  og_main.c  siyi_main.c
